sysyruntimelibrary-master/functional_test/27_while_test1.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/27_while_test1.sy:17:22: error: syntax error, unexpected R_PARENTHESIS
17|   return doubleWhile()
  |                       ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/27_while_test1.sy:0:0: error: not find main function
